--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,15 @@
+#application:
+#  bot:
+#    user:
+#      name:
+spring:
+  h2:
+    console.enabled: true
+  datasource:
+    url: jdbc:h2:file:c:/data/demo
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
 
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
