--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,14 @@
 #  bot:
 #    user:
 #      name:
-spring:
-  h2:
-    console.enabled: true
-  datasource:
-    url: jdbc:h2:file:c:/data/demo
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
+#spring:
+#  h2:
+#    console.enabled: true
+#  datasource:
+#    url: jdbc:h2:file:c:/data/demo
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password: password
 
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
